# trabalho_final_prog_web

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml
trabalho_final_prog_web/: __main__.py  database.py  exceptions.py
trabalho_final_prog_web/core/: exception_handler.py  log_filter.py  routes.py
trabalho_final_prog_web/models/: db_models.py  project.py  todo_item.py
trabalho_final_prog_web/routes/: project.py  root.py  todo_item.py
trabalho_final_prog_web/services/: project.py  todo_item.py
trabalho_final_prog_web/templates/: create_project.html  create_todo_item.html  home.html
